@@ -1,5 +1,6 @@
 ## 3.0.1
 
+- Improved: Animated icons in bottom bar when navigating
 - Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
 - Fixed: Simultaneous display of recipe photos and placeholder images
 - Fixed: Behavior option "reduce app startup time" not working on Android 12+
